--- a/templates/shop.html
+++ b/templates/shop.html
@@ -17,15 +17,15 @@
 
 <body>
 
-    <section id="categuries" class="container-fluid mb-3">
-        <div class="row">
-          <h2 class=" text-left mt-3 pt-3">Products:</h2>
+    <section class="container-fluid mb-3">
+        <div class="container">
+          <h2 class=" text-left m-3 p-3">Products:</h2>
           <div class="row row-cols-5 row-cols-md-4 g-4 px-3">
             {% for item in object_list%}
             <div class="col">
               <div class="card h-100">
                 <div class="card-body">
-                  <h3 class="card-title text-center text-capitalize">{{ item.name }}</h3>
+                  <h3 class="card-title text-center">{{ item.name }}</h3>
                   <p class="card-text text-center">
                     <a
                       href="{% url 'stocklist' pk=item.pk%}"
