--- a/templates/ordersubmit.html
+++ b/templates/ordersubmit.html
@@ -39,11 +39,12 @@
                   <hr>
                 </div>
               <h5 class="text-dark">{{ Stock }}</h5>
+              <h6 class="text-danger">price: {{ Stock.product.price }}</h6>
               <form action="" method="post">
                     {% csrf_token %}
                     {{ form | crispy }}
                     <label class="label">Quantity:</label>
-                    <input name="quantity" type="number" value="1" class="input w-10 mt-2" />
+                    <input id="qty" name="quantity" type="number" value="1" class="input w-10 mt-2" />
                     <br>
                     <input type="submit" href="{% url 'ordersubmit' pk=Stock.pk %}" class="btn  btn-success mt-2 " value="SUBMIT">
               </form>
