--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -24,9 +24,12 @@
       <span class="h2 m-2">Sign Up<span>
     </div>
     <hr>
+    <p class="text-dark">Already have an account? <a href='{% url 'login' %}'>Login</a></p>
     <form method="post">
+
       {% csrf_token %} {{form|crispy}}
       <button type="submit" class="btn btn-success">Sign Up</button>
+      
     </form>
   </div>
 </body>
