--- a/templates/base.html
+++ b/templates/base.html
@@ -96,7 +96,7 @@
         >
         
         {% if user.is_authenticated %}
-        
+        <i class="fas fa-angle-down"></i>
         <span class="text-info m-1 ">{{user.username}}
           {% if user.is_superuser %}
           <span class="text-info ">(Admin) </span>
